board-fe/board-fe-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: board-fe-ingress                      # Ingress Name
  namespace: board-fe
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: demo.com                       # Matching Host Domain Name
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: board-fe-headless-svc       # Target Service
                port:
                  number: 9000                    # Port
